changed to sqllite

--- a/bookingapp/src/app/seat/seat.component.html
+++ b/bookingapp/src/app/seat/seat.component.html
@@ -27,7 +27,7 @@
     <div class="container mt-5">
         <div *ngFor="let row of seats" class="seat-row">
             <!-- Iterate over each seat in the row -->
-            <div *ngFor="let seat of row"  [ngClass]="{'seat': true, 'booked': seat.is_booked === 1}">
+            <div *ngFor="let seat of row"  [ngClass]="{'seat': true, 'booked': seat.is_booked == 1}">
               <div  >
                 {{ seat.id }} 
               </div>
